# github-repo-meta-fetch

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml
src/: cli.rs  config.rs  fingerprint.rs  lib.rs  main.rs  model.rs  paths.rs
src/github/: auth.rs  gql.rs  mod.rs  rest.rs
src/github/queries/: comments.graphql  issues.graphql  prs.graphql  review_threads.graphql  reviews.graphql  timeline.graphql
src/ratelimit/: budget.rs  estimator.rs  mod.rs  store.rs
src/render/: frontmatter.rs  indexes.rs  issue.rs  mod.rs  pr.rs
src/render/snapshots/: github_repo_meta_fetch__render__pr__tests__snapshot_pr_document.snap  github_repo_meta_fetch__render__pr__tests__snapshot_pr_edge_cases.snap
src/store/: issues.rs  mod.rs  prs.rs  repo_meta.rs  sync_state.rs  taxonomy.rs
src/store/migrations/: 0001_init.sql  0002_pull_requests.sql
src/sync/: issues.rs  mod.rs  prs.rs  taxonomy.rs
tests/: cli.rs  cli_dispatch.rs  determinism.rs  end_to_end.rs  sync_issues.rs  sync_prs.rs
