[package]
name = "github-repo-meta-fetch"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
description = "Sync a GitHub repository's metadata (issues, comments, labels, milestones) into a deterministic Markdown tree for offline AI-agent review."
authors = ["Joachim Brandon LeBlanc <brandon@leblanc.codes>"]
license = "MIT"
repository = "https://github.com/demosdemon/github-repo-meta-fetch"
readme = "README.md"
keywords = ["github", "issues", "markdown", "cli", "sync"]
categories = ["command-line-utilities"]

[lints]
workspace = true

[[bin]]
name = "meta-fetch"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
bytes = "1.11.1"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive", "env"] }
etcetera = "0.11.0"
graphql_client = "0.16.0"
hex = "0.4.3"
http = "1.4.2"
http-body-util = "0.1.3"
humantime = "2.3.0"
octocrab = "0.53.1"
rusqlite = { version = "0.40.1", features = ["bundled", "chrono"] }
rusqlite_migration = "2.6.0"
serde = "1.0.228"
serde_json = "1.0.150"
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["rt", "macros", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.2.2"
insta = "1.48.0"
predicates = "3.1.4"
tempfile = "3.27.0"
wiremock = "0.6.5"

[workspace.lints.rust]
let_underscore_drop = "warn"
non_ascii_idents = "deny"

[workspace.lints.clippy]
# struct_excessive_bools = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
# unreadable_literal = "allow"
pedantic = { level = "warn", priority = -1 }
cargo_common_metadata = "warn"
negative_feature_names = "warn"
redundant_feature_names = "warn"
unwrap_used = "warn"
undocumented_unsafe_blocks = "warn"
